# aoc2021

./: .cookie.example  .gitignore  README.md  aoc2021.cabal  stack.yaml
input/: dayN.txt
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayN.hs  Main.hs
