cabal-version: >=1.10
name: aoc2021
version: 0.1.0.0
synopsis: Advent of Code 2021 solutions in Haskell
license: MIT
license-file: LICENSE
author: LilyRose2798
build-type: Simple
extra-source-files: README.md

executable aoc2021
  main-is: Main.hs
  build-depends:
    base >=4.12 && <4.13,
    containers,
    extra,
    util,
    text,
    split,
    utf8-string,
    bytestring,
    conduit,
    http-conduit,
    digits,
    timeit
  hs-source-dirs: src
  default-language: Haskell2010
  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
